# Human_Robot_Plug_Task

./: README.md
apriltags_ros/apriltags_ros/launch/: HRI_plug_task_gen3.launch  Untitled Document  example.launch  gen3_camera_test.launch  maozhen.launch  mehrdad.launch
hri_plug_task/launch/: HRI_plug_task_gen3.launch
hri_plug_task/src/: HRI_modeling_cable_gen3_kf.cpp  HRI_plug_task_gen3_kf.cpp
kalman_filter/: CMakeLists.txt  package.xml
kalman_filter/include/: kalman_common.h
kalman_filter/src/: kalman_node.cpp  kalman_test.cpp
lfd/: data_plot.py  gen3_joints_trajectory.py  gen3_trajectory_playback.cpp  gen3_trajectory_playback_direct.cpp
